ajustes de links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -264,7 +264,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/mulhersemverde.png"
+            src="./assets/mulhersemverde.png"
             alt="Mulher negra vestindo moletom verde com as duas mãos no peito e sorrindo"
           />
         </div>
@@ -472,7 +472,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/medico.png"
+            src="./assets/medico.png"
             alt="Médico feliz segurando uma prancheta com pacientes"
           />
         </div>
@@ -559,7 +559,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/imgcontact1.png"
+            src="./assets/imgcontact1.png"
             alt="Homem negro de moletom bege sorrindo e mexendo no celular"
           />
         </div>
@@ -739,6 +739,6 @@
 
     <!--ScrollReveal-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
